--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summa Solutions FED TEST</title>
+    <link rel="stylesheet" href="./css/app.css">
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
-    
+    <div class="s_wrapper">
+        <header class="s_page-header">
+            <h1 class="s_title">Summa Solutions FED Test</h1>
+            <p class="s_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        </header>
+    </div>
 </body>
 </html>
