--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Summa Solutions FED TEST</title>
     <link rel="stylesheet" href="./css/app.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
     <div class="s_wrapper">
