Cambia contenido estatico a dinamico con json

--- a/index.html
+++ b/index.html
@@ -15,79 +15,9 @@
             <h1 class="s_title">Summa Solutions FED Test</h1>
             <p class="s_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
         </header>
-        <div class="s_grid-container">
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
-            <div class="s_item">
-                <img class="s_item-image" src="./img/producto.png" alt="Producto">
-                <p class="s_item-title">Paragolpe delantero adap</p>
-                <div class="s_box-price">
-                    <span class="old-price">Antes: $2.626</span>
-                    <span class="normal-price">$2.101</span>
-                </div>
-                <a class="s_more" href="#">VER DETALLES</a>
-            </div>
+
+        <div id="s_post" class="s_grid-container">
+
         </div>
     </div>
 </body>
